--- a/nmd/main/templates/main/list_autor.html
+++ b/nmd/main/templates/main/list_autor.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>таблица авторов</title>
+    <title>таблица Персноналий</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 {% include 'main/header.html' %}
 <div class="container">
-    <h2>Список  Авторы</h2>
-    <a href="/create_autor">Добавить автора</a>
+    <h2>Список  Персноналий</h2>
+    <a href="/create_autor">Добавить персноналию</a>
     <table class="table table-striped">
         <thead>
             <tr>
@@ -34,7 +34,7 @@
                 <td>
                     <form method="post" action="{% url 'autor_get' item.id %}">
                         {% csrf_token %}
-                        <button type="submit" class="btn btn-danger">Профиль автора</button>
+                        <button type="submit" class="btn btn-danger">Профиль персноналии</button>
                     </form>
                 </td>
             </tr>
