--- a/nmd/main/templates/main/main.html
+++ b/nmd/main/templates/main/main.html
@@ -18,7 +18,7 @@
 <body>
 
 {% include 'main/header.html' %}
-<div class="container"><img width="auto" src="https://cdn-ajfbi.nitrocdn.com/GuYcnotRkcKfJXshTEEKnCZTOtUwxDnm/assets/images/optimized/rev-a7f0530/bs-uploads.toptal.io/blackfish-uploads/blog/post/seo/og_image_file/og_image/15493/0712-Bad_Practices_in_Database_Design_-_Are_You_Making_These_Mistakes_Dan_Social-754bc73011e057dc76e55a44a954e0c3.png"></div>
+<div class="container"><img width="auto" src="https://elib.sfu-kras.ru/themes/Mirage2//images/sibfu-logo-full.png"></div>
 <div class="container">
     
     <h6 style="color:ccc">*отображаются последние 5 записей</h6>
