--- a/nmd/main/templates/main/header.html
+++ b/nmd/main/templates/main/header.html
@@ -34,6 +34,7 @@
       </a>
 
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+        <li><img width="auto" src="https://elib.sfu-kras.ru/themes/Mirage2//images/sibfu-logo-full.png"></li>
         <li><a href="/" class="nav-link px-2 link-secondary">Главная</a></li>
         <div class="dropdown">
           <a  class="nav-link px-2 link-body-emphasis">Персоналии</a>
