--- a/nmd/main/templates/main/list_autor.html
+++ b/nmd/main/templates/main/list_autor.html
@@ -7,8 +7,8 @@
 <body>
 {% include 'main/header.html' %}
 <div class="container">
-    <h2>Список  Персноналий</h2>
-    <a href="/create_autor">Добавить персноналию</a>
+    <h2>Список  Персналий</h2>
+    <a href="/create_autor">Добавить персналию</a>
     <table class="table table-striped">
         <thead>
             <tr>
@@ -34,7 +34,7 @@
                 <td>
                     <form method="post" action="{% url 'autor_get' item.id %}">
                         {% csrf_token %}
-                        <button type="submit" class="btn btn-danger">Профиль персноналии</button>
+                        <button type="submit" class="btn btn-danger">Профиль персналии</button>
                     </form>
                 </td>
             </tr>
