--- a/nmd/main/templates/main/software_detail.html
+++ b/nmd/main/templates/main/software_detail.html
@@ -46,14 +46,18 @@
                 <th>ID</th>
                 <th>Имя</th>
                 <th>Фамилия</th>
+                <th>Отчество</th>
+
             </tr>
         </thead>
         <tbody>
             {% for author in software.authors.all %}
             <tr>
                 <td>{{ author.id }}</td>
+                <td>{{ author.first_name }}</td>
                 <td>{{ author.name }}</td>
-                <td>{{ author.last_name }}</td>
+                <td>{{ author.first_name }}</td>
+
             </tr>
             {% endfor %}
         </tbody>
