В авторах теперь отображаются Диссертации

--- a/nmd/main/templates/main/autor_detail.html
+++ b/nmd/main/templates/main/autor_detail.html
@@ -59,7 +59,7 @@
     <table class="table">
         <thead>
             <tr>
-                <th>ID</th>
+                <th>ID<br>(в рамках типа документа)</th>
                 <th>Тип</th>
                 <th>название</th>
                 <th>Действие</th>
